VisualForcePage/src/objects/SALARY_DETAILS__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Bank_Details__c</fullName>
        <label>Bank Details</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basic__c</fullName>
        <label>Basic</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Credited To</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipName>Salary_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gross_Salary__c</fullName>
        <formula>Total_Earnings__c  -  PF_Deduction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRA__c</fullName>
        <label>HRA</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mode_Of_Payment__c</fullName>
        <label>Mode Of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RTSG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PF_Deduction__c</fullName>
        <label>PF Deduction</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salary_Credited_Date__c</fullName>
        <label>Salary Credited Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Salary_Id__c</fullName>
        <displayFormat>sal-{0000000}</displayFormat>
        <label>Salary Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Special_Allowence__c</fullName>
        <label>Special Allowence</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Earnings__c</fullName>
        <formula>Basic__c  +  HRA__c  +  Special_Allowence__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Earnings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>SALARY DEATILS</label>
    <nameField>
        <label>Salary Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SALARY DETAILS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Account_validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISNULL( Bank_Account_Number__c ),TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Bank_Account_Number__c</errorDisplayField>
        <errorMessage>ENTER BANK ACCOUNT NUMBER .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BANK_DETAILS</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Bank_Details__c )</errorConditionFormula>
        <errorMessage>CAN&apos;T EDIT BANK DETAILS</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Earning_validations</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Total_Earnings__c &lt;0  ||  Total_Earnings__c == 0, TRUE, FALSE)</errorConditionFormula>
        <errorMessage>ENTER CORRECT SALARY DETAILS</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Salary_Details</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Employee__r.Is_Active__c == FALSE, TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Bank_Account_Number__c</errorDisplayField>
        <errorMessage>Salary for Employees on notice period cannot be enterd</errorMessage>
    </validationRules>
</CustomObject>